Fix alignment of more links, and update colors of the contained places.

--- a/static/css/place/place.scss
+++ b/static/css/place/place.scss
@@ -98,12 +98,17 @@ $sidebar-top-padding: 132px;  // Keep in sync with place.ts: Y_SCROLL_LIMIT
   margin: 15px 0 10px;
 }
 
+#body .subtopic h3 a {
+  line-height: 1.2rem;
+}
+
 #main h2 .more a,
 #body .subtopic h3 .more a {
   color: var(--dc-gray);
   font-weight: 400;
   font-size: .8rem;
   float: right;
+  margin-top: 2px;
   text-decoration: none;
 }
 
@@ -222,6 +227,7 @@ $sidebar-top-padding: 132px;  // Keep in sync with place.ts: Y_SCROLL_LIMIT
 }
 
 .child-place-type {
+  color: var(--dc-gray);
   font-weight: bold;
   font-size: 13px;
   margin-top: 10px;
@@ -229,10 +235,10 @@ $sidebar-top-padding: 132px;  // Keep in sync with place.ts: Y_SCROLL_LIMIT
 }
 
 .child-place-link {
+  color: var(--dc-gray);
   font-size: 13px;
   margin-right: 4px;
   text-decoration: underline;
-  color: black;
   display:inline-block;
 }
 
